--- a/android/build.gradle
+++ b/android/build.gradle
@@ -22,6 +22,7 @@ rootProject.allprojects {
 apply plugin: 'com.android.library'
 
 android {
+    namespace 'com.apoleo88.sound_mode'
     defaultConfig {
         compileSdk 34
         minSdkVersion 16
